BUG 14276 Disabled listbox - selected options not readable SOLVED
- In Chrome the default color for disabled options was the same that the background
- Change the defaukt color for the disabled selected options to black

--- a/workflow/engine/skinEngine/base/css/style.css
+++ b/workflow/engine/skinEngine/base/css/style.css
@@ -633,6 +633,15 @@ form.formDefault select
 	font:normal 11px sans-serif,MiscFixed;
 	color:#000;
 }
+form.formDefault select[disabled] {
+    color: #000;
+}
+form.formDefault select[disabled] > option {
+    color: #000;
+}
+form.formDefault select[disabled] > option:checked {
+    color: #000;
+}
 form.formDefault table
 {
 	font:normal 11px sans-serif,MiscFixed;
